--- a/src/components/hero/hero.module.css
+++ b/src/components/hero/hero.module.css
@@ -9,31 +9,49 @@
 }
 
 .find {
-  font-size: 10vmax;
+  font-size: 4.5vmax;
   line-height: 81.619%;
   letter-spacing: -1.9px;
 }
 
 .your {
   color: #4561a8;
-  font-size: 10vmax;
+  font-size: 4.5vmax;
   line-height: 81.619%;
   letter-spacing: -1.9px;
 }
 
 .tv {
-  font-size: 12vmax;
+  font-size: 5.5vmax;
   line-height: 81.619%;
   letter-spacing: -2.35px;
 }
 
 .adventure {
-  font-size: 8.8vmax;
+  font-size: 4.3vmax;
   line-height: 81.619%;
   letter-spacing: -3.85px;
 }
 
-@media (max-width: 540px) {
+@media (min-width: 320px) {
+  .find {
+    font-size: 6vmax;
+  }
+
+  .your {
+    font-size: 6vmax;
+  }
+
+  .tv {
+    font-size: 7.3vmax;
+  }
+
+  .adventure {
+    font-size: 5.5vmax;
+  }
+}
+
+@media (min-width: 540px) {
   .find {
     font-size: 8vmax;
   }
@@ -51,20 +69,20 @@
   }
 }
 
-@media (max-width: 320px) {
+@media (min-width: 786px) {
   .find {
-    font-size: 6vmax;
+    font-size: clamp(8rem, 5vmax, 9rem);
   }
 
   .your {
-    font-size: 6vmax;
+    font-size: clamp(8rem, 5vmax, 9rem);
   }
 
   .tv {
-    font-size: 7.3vmax;
+    font-size: clamp(9.54rem, 5vmax, 10.54rem);
   }
 
   .adventure {
-    font-size: 5.5vmax;
+    font-size: clamp(7rem, 5vmax, 8rem);
   }
 }
